# idgen

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/lib/: functions.rs
src/utils/: functions.rs  idgen.rs  mod.rs
tests/: checknum_tests.rs
