[package]
name = "fii-id"
version = "1.4.0"
description = "Générateur d'ID FII"
authors = ["Woomy4680-exe <github@woomy.ovh>"]
license = "MIT"
edition = "2018"

homepage = "https://github.com/federation-interservices-d-informatique/fii-id"
repository = "https://github.com/federation-interservices-d-informatique/fii-id"

[dependencies]
rand = "0.8.3"
